--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cloud_firestore: ^5.6.2
   permission_handler: ^11.3.1
   excel: ^4.0.6
+  url_launcher: ^6.3.1
   
 
 dev_dependencies:
