--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,8 +23,9 @@
         android:label="kashmeer_milk"
         android:icon="@mipmap/ic_launcher">
 
+
         <!-- ✅ Disable Impeller to fix black screen issue -->
-        <meta-data android:name="flutter.renderer" android:value="opengl"/>
+        <meta-data android:name="flutter.renderer" android:value="skia"/>
         
         <!-- ✅ Required Flutter metadata -->
         <meta-data android:name="flutterEmbedding" android:value="2"/>
