--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   provider: ^6.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  connectivity_plus: ^6.1.3
+  path_provider: ^2.1.5
   
   
 
@@ -36,6 +39,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
 
 flutter:
   uses-material-design: true
