--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,12 +9,23 @@ android {
     namespace "com.example.kashmeer_milk"
     compileSdk 34 // Use the latest stable version
 
-    ndkVersion = flutter.ndkVersion
+    // Ensure NDK version is correctly defined
+    ndkVersion = flutter.ndkVersion ?: "25.1.8937393"
+
+    // Signing configurations for debug and release builds
+    signingConfigs {
+        debug {
+            storeFile file("$rootDir/app/debug.keystore") // FIXED PATH
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
+    }
 
     defaultConfig {
         applicationId "com.example.kashmeer_milk"
         minSdk 24
-        targetSdk 34 // Updated for better support
+        targetSdk 34
         versionCode flutter.versionCode
         versionName flutter.versionName
     }
@@ -29,19 +40,14 @@ android {
     }
 
     buildTypes {
-        release {
-            signingConfig signingConfigs.debug // Ensure signing configuration
+        debug {
+            signingConfig signingConfigs.debug
+        }
 
+        release {
             minifyEnabled true // Enable code shrinking & obfuscation
             shrinkResources true // Remove unused resources
-            
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
-        }
-    }
-
-    signingConfigs {
-        debug {
-            storeFile file("debug.keystore")
         }
     }
 }
