--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,19 @@
 
     <!-- ✅ Required Permissions -->
     <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <!-- ✅ Required for Android 10+ (Query SMS App) -->
+    <queries>
+        <package android:name="com.android.mms"/>
+        <package android:name="com.android.contacts"/>
+    </queries>
+
     <application
         android:label="kashmeer_milk"
         android:icon="@mipmap/ic_launcher">
