--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,15 +7,13 @@ plugins {
 
 android {
     namespace "com.example.kashmeer_milk"
-    compileSdk 34 // Use the latest stable version
+    compileSdk 34
 
-    // Ensure NDK version is correctly defined
     ndkVersion = flutter.ndkVersion ?: "25.1.8937393"
 
-    // Signing configurations for debug and release builds
     signingConfigs {
         debug {
-            storeFile file("$rootDir/app/debug.keystore") // FIXED PATH
+            storeFile file("$rootDir/app/debug.keystore")
             storePassword "android"
             keyAlias "androiddebugkey"
             keyPassword "android"
@@ -26,8 +24,9 @@ android {
         applicationId "com.example.kashmeer_milk"
         minSdk 24
         targetSdk 34
-        versionCode flutter.versionCode
+        versionCode flutter.versionCode.toInteger()
         versionName flutter.versionName
+        multiDexEnabled true
     }
 
     compileOptions {
@@ -45,11 +44,29 @@ android {
         }
 
         release {
-            minifyEnabled true // Enable code shrinking & obfuscation
-            shrinkResources true // Remove unused resources
+            signingConfig signingConfigs.debug
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
+}
+
+dependencies {
+    // Unified Play Core dependencies (recommended solution)
+    implementation 'com.google.android.play:app-update:2.1.0'
+    implementation 'com.google.android.play:review:2.0.1'
+    implementation 'com.google.android.play:feature-delivery:2.1.0'
+    
+    // If you specifically need core 1.10.3 for some plugins, use this instead:
+    // implementation('com.google.android.play:core:1.10.3') {
+    //     exclude group: 'com.google.android.play', module: 'core-common'
+    // }
+    
+    // Firebase and other essential dependencies
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
 
 flutter {
