--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
-org.gradle.jvmargs=-Xmx2g -Dkotlin.compiler.jvmTarget=1.8
+org.gradle.jvmargs=-Xmx4g -Dkotlin.compiler.jvmTarget=17
 android.useAndroidX=true
 android.enableJetifier=true
 android.enableImpeller=false
-
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
