--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,17 @@
+buildscript {
+    ext.kotlin_version = '1.8.20'  // Updated Kotlin version (ensure it is the latest stable version)
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.0'  // Update to the latest AGP version
+        classpath 'com.google.gms:google-services:4.3.15'  // Ensure the correct version of google-services
+    }
+}
+
 plugins {
     id "com.android.application"
     id "kotlin-android"
@@ -22,20 +36,21 @@ android {
 
     defaultConfig {
         applicationId "com.example.kashmeer_milk"
-        minSdk 24
+        minSdk 19
         targetSdk 34
         versionCode flutter.versionCode.toInteger()
         versionName flutter.versionName
         multiDexEnabled true
     }
 
+    // ✅ Java 17 compatibility settings
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "17"
     }
 
     buildTypes {
@@ -57,11 +72,6 @@ dependencies {
     implementation 'com.google.android.play:app-update:2.1.0'
     implementation 'com.google.android.play:review:2.0.1'
     implementation 'com.google.android.play:feature-delivery:2.1.0'
-    
-    // If you specifically need core 1.10.3 for some plugins, use this instead:
-    // implementation('com.google.android.play:core:1.10.3') {
-    //     exclude group: 'com.google.android.play', module: 'core-common'
-    // }
     
     // Firebase and other essential dependencies
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
