--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,12 +1,4 @@
-# Increase JVM heap size for Gradle
-org.gradle.jvmargs=-Xmx4g -Dkotlin.compiler.jvmTarget=17
-
-# Enable AndroidX support
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
-
-# Disable Impeller (if you're not using it)
 android.enableImpeller=false
-
-# Set the Java SDK home directory
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
