--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,7 +21,7 @@ plugins {
 
 android {
     namespace "com.example.kashmeer_milk"
-    compileSdk 34
+    compileSdk 35
     ndkVersion = flutter.ndkVersion ?: "25.1.8937393"
 
     signingConfigs {
@@ -36,7 +36,7 @@ android {
     defaultConfig {
         applicationId "com.example.kashmeer_milk"
         minSdk 23
-        targetSdk 34
+        targetSdk 35
         versionCode flutter.versionCode.toInteger()
         versionName flutter.versionName
         multiDexEnabled true
@@ -48,6 +48,7 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
+    // Kotlin JVM target 17 for compatibility with Java 17
     kotlinOptions {
         jvmTarget = "17"
     }
